plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'application'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // JSON
    implementation 'org.json:json:20210307'

    // Swagger/OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Database
//    runtimeOnly 'com.h2database:h2'
    implementation 'com.mysql:mysql-connector-j'

    // Test Dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    // Spring Session Redis 의존성
    implementation 'org.springframework.session:spring-session-data-redis'
    // Spring Data Redis 의존성
//    implementation 'org.springframework.data:spring-data-redis'
    // Lettuce 클라이언트 의존성
//    implementation 'io.lettuce.core:lettuce-core:6.3.2'
}

application {
    mainClass = 'com.example.travelbag.TravelbagApplication'
}

tasks.named('test') {
    useJUnitPlatform()
}